# switch2macro-dlint

./: Cargo.toml  README.md  input  input_invalid
src/: convert.rs  extract.rs  main.rs
