[package]
name = "switch2macro-dlint"
version = "0.1.0"
authors = ["Yusuke Tanaka <yusuktan@maguro.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.45", features = ["full", "extra-traits"] }
quote = "1.0.7"
